--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="out/Windows/HAT_game.exe"
+export_path="Release/HAT_game.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -20,7 +20,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
@@ -36,7 +36,7 @@ application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
-application/product_version=""
+application/product_version="V1.0"
 application/company_name=""
 application/product_name=""
 application/file_description=""
@@ -77,7 +77,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="out/Linux/HAT_game.x86_64"
+export_path="Release/HAT_game.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
