--- a/HAT_Game.csproj
+++ b/HAT_Game.csproj
@@ -8,5 +8,6 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Google.GenAI" Version="0.6.0" />
   </ItemGroup>
 </Project>
